# zipfile-aes

./: LICENSE  README.md  patch_zipfile.py  pyproject.toml
.github/workflows/: ci.yaml
src/: zipfile_stdlib_patched.py
src/zipfile_aes/: __init__.py
tests/: README.md  test_zipfile_aes.py
