[project]
name = "zipfile-aes"
version = "0.1.0"
description = "Support for WinZIP AES files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "src/zipfile_stdlib_patched.py",
]
